MaxPermSize has been cut too.